2006-05-23  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Use dbstate only to not get out of
	sync with db and active person.

2006-05-23  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (start_eventref): Do not reset existing
	birth/deat reference.

2006-05-23  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: renamed from _FamilyView
	* src/DataViews/__init__.py: use RelationView.py
	* src/DataViews/Makefile.am: update
	* src/DataViews/_FamilyView.py: more shading

2006-05-22  Alex Roitman  <shura@gramps-project.org>
	* data/gramps.schemas.in: Typos.
	* src/DataViews/_PedigreeView.py (rebuild): Typo.

2006-05-22  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: start shading of data

2006-05-22  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: Multiple improvements.
	* various: Replace get/set_base_handle with get/set_reference_handle.
	* src/RelLib/_SourceRef.py (get_base_handle,set_base_handle):
	Remove redundant methods.
	* src/ArgHandler.py (need_gui): Add method.
	* src/ViewManager.py: Move statusbar notification from gramps_main.
	* src/gramps_main.py: Remove unused methods, handle ArgHandler better.

2006-05-21  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: handle export, import, and save as if
	database does not exist, yet UIManager still wants to call them.

2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Set up for the next release.

2006-05-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsWidgets.py (MonitoredEntry.set_text): added function

2006-05-21  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: Repository export.
	* src/GrampsDb/_GrampsInMemDB.py (GrampsInMemDB.__init__): Remove
	unused variables.
	* src/plugins/Calendar.py (print_page): Use correct variable.

2006-05-21  Brian Matherly  <brian@gramps-project.org>