@@ -773,11 +773,11 @@ class GrampsParser(UpdateCallback):
         elif self.person:
             event.personal = True
             if (event.type == RelLib.EventType.BIRTH) \
-                   and (self.person.birth_ref == None):
-                self.person.birth_ref = self.eventref
+                   and (self.person.get_birth_ref() == None):
+                self.person.set_birth_ref(self.eventref)
             elif (event.type == RelLib.EventType.DEATH) \
-                     and (self.person.death_ref == None):
-                self.person.death_ref = self.eventref
+                     and (self.person.get_death_ref() == None):
+                self.person.set_death_ref(self.eventref)
             else:
                 self.person.add_event_ref(self.eventref)
 
